# gov-data

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
gov_data/: authentication.py  base.py  exceptions.py
gov_data/bea/: bea.py
gov_data/bls/: bls.py
gov_data/census/: census.py
gov_data/congress/: congress.py
gov_data/fed/: base.py  employment.py  exchange_rates.py  fed.py  interest_rates.py  monetary.py  national_accounts.py  prices.py
gov_data/nws/: nws.py
tests/: test_authentication.py  test_fed.py
