[tool.poetry]
name = "gov-data"
version = "0.1.0"
description = "Package to interact with US Government APIs"
authors = ["Daniel Crosson <dcross42@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
